--- a/client/templates/diagram.html
+++ b/client/templates/diagram.html
@@ -1,13 +1,17 @@
 <template name='diagram'>
     {{> diagram-header diagram}}
-    <div class='row'>
-        <div class='span4'>
-            My Control Panel
-            <a href='/help'>Help</a><br/>
-            <a href='/new_diagram'>New Diagram</a><br/>
-        </div>
-        <div class='span8'>
-            Here is my content
+    <!-- TODO: Refactor this into style sheets / better stuff -->
+    <div style='position:absolute;top:75px;left:0;right:0;bottom:0'>
+        <div style='position:relative;width:100%;height:100%'>
+            <div style='position:absolute;left:0;top:0;bottom:0;width:10%'>
+                My Control Panel
+                <a href='/help'>Help</a><br/>
+                <a href='/new_diagram'>New Diagram</a><br/>
+            </div>
+            <div style='position:absolute;left:10%;top:0;bottom:0;width:90%'>
+                <div style='width:100%;height:100%'class='renderArea'></div>
+                <div style='position:absolute;width:100%;height:100%;top:0'class='hitArea'></div>
+            </div>
         </div>
     </div>
 </template>
