--- a/js/client/templates/diagram.html
+++ b/js/client/templates/diagram.html
@@ -1,5 +1,7 @@
 <template name='diagram'>
-    {{> diagram-header diagram}}
+    <div class='well'>
+        Title: {{diagram.title}}
+    </div>
     <!-- TODO: Refactor this into style sheets / better stuff -->
     <div style='position:absolute;top:75px;left:0;right:0;bottom:0'>
         <div style='position:relative;width:100%;height:100%'>
@@ -12,11 +14,5 @@
                 <div style='width:100%;height:100%'class='renderArea'></div>
             </div>
         </div>
-    </div>
-</template>
-
-<template name='diagram-header'>
-    <div class='well'>
-        Title: {{title}}
     </div>
 </template>
