--- a/js/client/templates/home.html
+++ b/js/client/templates/home.html
@@ -1,4 +1,4 @@
-<template name='help'>
+<template name='home'>
     Help<br/>
     <a href='/diagram/1234'>Diagram</a><br/>
     <a href='/new_diagram'>New Diagram</a><br/>
