--- a/js/client/templates/diagram.html
+++ b/js/client/templates/diagram.html
@@ -9,7 +9,7 @@
                 <a href='/new_diagram'>New Diagram</a><br/>
             </div>
             <div style='position:absolute;left:10%;top:0;bottom:0;width:90%'>
-                <div style='width:100%;height:100%'class='renderArea'></div>
+                <div id='{{timestamp}}' style='width:100%;height:100%'class='renderArea'></div>
             </div>
         </div>
     </div>
