--- a/js/client/templates/diagram.html
+++ b/js/client/templates/diagram.html
@@ -9,6 +9,7 @@
                 My Control Panel
                 <a href='/help'>Help</a><br/>
                 <a href='/new_diagram'>New Diagram</a><br/>
+                {{> diagramShapes}}
             </div>
             <div style='position:absolute;left:10%;top:0;bottom:0;width:90%'>
                 {{> diagramBody}}
@@ -23,4 +24,12 @@
 
 <template name='diagramBody'>
     <div id='{{timestamp}}' style='width:100%;height:100%'class='renderArea'></div>
+</template>
+
+<template name='diagramShapes'>
+    <div class='row'>
+        {{#each types}}
+            <div class='span4' id='{{typeName}}'>{{displayName}}</div>
+        {{/each}}
+    </div>
 </template>
