--- a/js/client/templates/diagram.html
+++ b/js/client/templates/diagram.html
@@ -5,13 +5,13 @@
     <!-- TODO: Refactor this into style sheets / better stuff -->
     <div style='position:absolute;top:75px;left:0;right:0;bottom:0'>
         <div style='position:relative;width:100%;height:100%'>
-            <div style='position:absolute;left:0;top:0;bottom:0;width:10%'>
+            <div style='position:absolute;left:0;top:0;bottom:0;width:20%'>
                 My Control Panel
                 <a href='/help'>Help</a><br/>
                 <a href='/new_diagram'>New Diagram</a><br/>
                 {{> diagramShapes}}
             </div>
-            <div style='position:absolute;left:10%;top:0;bottom:0;width:90%'>
+            <div style='position:absolute;left:20%;top:0;bottom:3px;width:80%'>
                 {{> diagramBody}}
             </div>
         </div>
@@ -27,9 +27,13 @@
 </template>
 
 <template name='diagramShapes'>
-    <div class='row'>
+    <ul id='shapes-list' class='nav nav-pills nav-stacked'>
         {{#each types}}
-            <div class='span4' id='{{typeName}}'>{{displayName}}</div>
+            <li class='nav-item {{#if isSelected type}}active{{/if}}'id='{{type}}'>
+                <a href='#'>
+                    {{displayName}}
+                </a>
+            </li>
         {{/each}}
-    </div>
+    </ul>
 </template>
