Refactored out the circle shape.  Now the rest should be pretty quick to get up and running.

--- a/js/client/templates/diagram.html
+++ b/js/client/templates/diagram.html
@@ -19,7 +19,7 @@
 </template>
 
 <template name='diagramHeader'>
-    Title: {{title}}
+    Title: {{title}} <div class='right'>Alpha {{version}}</div>
 </template>
 
 <template name='diagramBody'>
