Adding console statements, and some trivial changes to play around with meteor and understand current state of project.

--- a/js/client/templates/home.html
+++ b/js/client/templates/home.html
@@ -1,5 +1,9 @@
 <template name='home'>
+    <h3>Account</h3>
+    <h4/>
     Help<br/>
     <a href='/diagram/1234'>Diagram</a><br/>
     <a href='/new_diagram'>New Diagram</a><br/>
+    <h3>My Diagrams</h3>
+
 </template>
